MDEV-18306: Optimizer_trace has invalid JSON near rows_estimation

Made changes to rows_estimation and execution_plan_for_potential_materialization
so as they print valid JSON